// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`int2.sql > line 21 1`] = `
[
  "SELECT pg_input_is_valid('34', 'int2')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 25,
                            "sval": {
                              "sval": "34",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 31,
                            "sval": {
                              "sval": "int2",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_input_is_valid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`int2.sql > line 31 1`] = `
[
  "SELECT * FROM INT2_TBL AS f(a, b)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "f",
                    "colnames": [
                      {
                        "String": {
                          "sval": "a",
                        },
                      },
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                    ],
                  },
                  "inh": true,
                  "location": 14,
                  "relname": "int2_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`int2.sql > line 33 1`] = `
[
  "SELECT * FROM (TABLE int2_tbl) AS s (a, b)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "s",
                    "colnames": [
                      {
                        "String": {
                          "sval": "a",
                        },
                      },
                      {
                        "String": {
                          "sval": "b",
                        },
                      },
                    ],
                  },
                  "subquery": {
                    "SelectStmt": {
                      "fromClause": [
                        {
                          "RangeVar": {
                            "inh": true,
                            "location": 21,
                            "relname": "int2_tbl",
                            "relpersistence": "p",
                          },
                        },
                      ],
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "targetList": [
                        {
                          "ResTarget": {
                            "location": -1,
                            "val": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "A_Star": {},
                                  },
                                ],
                                "location": -1,
                              },
                            },
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`int2.sql > line 35 1`] = `
[
  "SELECT i.* FROM INT2_TBL i WHERE i.f1 <> int2 '0'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "i",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "int2_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "i",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "i",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 33,
                  },
                },
                "location": 38,
                "name": [
                  {
                    "String": {
                      "sval": "<>",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 46,
                        "sval": {
                          "sval": "0",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 41,
                      "names": [
                        {
                          "String": {
                            "sval": "int2",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`int2.sql > line 39 1`] = `
[
  "SELECT i.* FROM INT2_TBL i WHERE i.f1 = int2 '0'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "i",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "int2_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "i",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "i",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 33,
                  },
                },
                "location": 38,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 45,
                        "sval": {
                          "sval": "0",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 40,
                      "names": [
                        {
                          "String": {
                            "sval": "int2",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`int2.sql > line 43 1`] = `
[
  "SELECT i.* FROM INT2_TBL i WHERE i.f1 < int2 '0'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "i",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "int2_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "i",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "i",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 33,
                  },
                },
                "location": 38,
                "name": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 45,
                        "sval": {
                          "sval": "0",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 40,
                      "names": [
                        {
                          "String": {
                            "sval": "int2",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`int2.sql > line 47 1`] = `
[
  "SELECT i.* FROM INT2_TBL i WHERE i.f1 <= int2 '0'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "i",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "int2_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "i",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "i",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 33,
                  },
                },
                "location": 38,
                "name": [
                  {
                    "String": {
                      "sval": "<=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 46,
                        "sval": {
                          "sval": "0",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 41,
                      "names": [
                        {
                          "String": {
                            "sval": "int2",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`int2.sql > line 51 1`] = `
[
  "SELECT i.* FROM INT2_TBL i WHERE i.f1 > int2 '0'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "i",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "int2_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "i",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "i",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 33,
                  },
                },
                "location": 38,
                "name": [
                  {
                    "String": {
                      "sval": ">",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 45,
                        "sval": {
                          "sval": "0",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 40,
                      "names": [
                        {
                          "String": {
                            "sval": "int2",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`int2.sql > line 55 1`] = `
[
  "SELECT i.* FROM INT2_TBL i WHERE i.f1 >= int2 '0'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "i",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "int2_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "i",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "i",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 33,
                  },
                },
                "location": 38,
                "name": [
                  {
                    "String": {
                      "sval": ">=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 46,
                        "sval": {
                          "sval": "0",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 41,
                      "names": [
                        {
                          "String": {
                            "sval": "int2",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`int2.sql > line 60 1`] = `
[
  "SELECT i.* FROM INT2_TBL i WHERE (i.f1 % int2 '2') = int2 '1'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "i",
                  },
                  "inh": true,
                  "location": 16,
                  "relname": "int2_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "i",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "i",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 34,
                      },
                    },
                    "location": 39,
                    "name": [
                      {
                        "String": {
                          "sval": "%",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 46,
                            "sval": {
                              "sval": "2",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 41,
                          "names": [
                            {
                              "String": {
                                "sval": "int2",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
                "location": 51,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 58,
                        "sval": {
                          "sval": "1",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 53,
                      "names": [
                        {
                          "String": {
                            "sval": "int2",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`int2.sql > line 65 1`] = `
[
  "SELECT i.f1, i.f1 * int2 '2' AS x FROM INT2_TBL i",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "i",
                  },
                  "inh": true,
                  "location": 39,
                  "relname": "int2_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "i",
                          },
                        },
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 13,
                  "name": "x",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "i",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 13,
                        },
                      },
                      "location": 18,
                      "name": [
                        {
                          "String": {
                            "sval": "*",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 25,
                              "sval": {
                                "sval": "2",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 20,
                            "names": [
                              {
                                "String": {
                                  "sval": "int2",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`int2.sql > line 67 1`] = `
[
  "SELECT i.f1, i.f1 * int2 '2' AS x FROM INT2_TBL i
WHERE abs(f1) < 16384",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "i",
                  },
                  "inh": true,
                  "location": 39,
                  "relname": "int2_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "i",
                          },
                        },
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 13,
                  "name": "x",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "i",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 13,
                        },
                      },
                      "location": 18,
                      "name": [
                        {
                          "String": {
                            "sval": "*",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 25,
                              "sval": {
                                "sval": "2",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 20,
                            "names": [
                              {
                                "String": {
                                  "sval": "int2",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 60,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "abs",
                        },
                      },
                    ],
                    "location": 56,
                  },
                },
                "location": 64,
                "name": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 16384,
                    },
                    "location": 66,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`int2.sql > line 72 1`] = `
[
  "SELECT i.f1, i.f1 + int2 '2' AS x FROM INT2_TBL i",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "i",
                  },
                  "inh": true,
                  "location": 39,
                  "relname": "int2_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "i",
                          },
                        },
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 13,
                  "name": "x",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "i",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 13,
                        },
                      },
                      "location": 18,
                      "name": [
                        {
                          "String": {
                            "sval": "+",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 25,
                              "sval": {
                                "sval": "2",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 20,
                            "names": [
                              {
                                "String": {
                                  "sval": "int2",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`int2.sql > line 74 1`] = `
[
  "SELECT i.f1, i.f1 + int2 '2' AS x FROM INT2_TBL i
WHERE f1 < 32766",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "i",
                  },
                  "inh": true,
                  "location": 39,
                  "relname": "int2_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "i",
                          },
                        },
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 13,
                  "name": "x",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "i",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 13,
                        },
                      },
                      "location": 18,
                      "name": [
                        {
                          "String": {
                            "sval": "+",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 25,
                              "sval": {
                                "sval": "2",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 20,
                            "names": [
                              {
                                "String": {
                                  "sval": "int2",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 56,
                  },
                },
                "location": 59,
                "name": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 32766,
                    },
                    "location": 61,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`int2.sql > line 79 1`] = `
[
  "SELECT i.f1, i.f1 - int2 '2' AS x FROM INT2_TBL i",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "i",
                  },
                  "inh": true,
                  "location": 39,
                  "relname": "int2_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "i",
                          },
                        },
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 13,
                  "name": "x",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "i",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 13,
                        },
                      },
                      "location": 18,
                      "name": [
                        {
                          "String": {
                            "sval": "-",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 25,
                              "sval": {
                                "sval": "2",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 20,
                            "names": [
                              {
                                "String": {
                                  "sval": "int2",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`int2.sql > line 81 1`] = `
[
  "SELECT i.f1, i.f1 - int2 '2' AS x FROM INT2_TBL i
WHERE f1 > -32767",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "i",
                  },
                  "inh": true,
                  "location": 39,
                  "relname": "int2_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "i",
                          },
                        },
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 13,
                  "name": "x",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "i",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 13,
                        },
                      },
                      "location": 18,
                      "name": [
                        {
                          "String": {
                            "sval": "-",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 25,
                              "sval": {
                                "sval": "2",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 20,
                            "names": [
                              {
                                "String": {
                                  "sval": "int2",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 56,
                  },
                },
                "location": 59,
                "name": [
                  {
                    "String": {
                      "sval": ">",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {},
                    "location": 61,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`int2.sql > line 86 1`] = `
[
  "SELECT i.f1, i.f1 / int2 '2' AS x FROM INT2_TBL i",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "i",
                  },
                  "inh": true,
                  "location": 39,
                  "relname": "int2_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "i",
                          },
                        },
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 13,
                  "name": "x",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "i",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 13,
                        },
                      },
                      "location": 18,
                      "name": [
                        {
                          "String": {
                            "sval": "/",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 25,
                              "sval": {
                                "sval": "2",
                              },
                            },
                          },
                          "location": -1,
                          "typeName": {
                            "location": 20,
                            "names": [
                              {
                                "String": {
                                  "sval": "int2",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`int2.sql > line 91 1`] = `
[
  "SELECT (-1::int2<<15)::text",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "TypeCast": {
                      "arg": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "location": 8,
                              "name": [
                                {
                                  "String": {
                                    "sval": "-",
                                  },
                                },
                              ],
                              "rexpr": {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1,
                                      },
                                      "location": 9,
                                    },
                                  },
                                  "location": 10,
                                  "typeName": {
                                    "location": 12,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "int2",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                            },
                          },
                          "location": 16,
                          "name": [
                            {
                              "String": {
                                "sval": "<<",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "ival": {
                                "ival": 15,
                              },
                              "location": 18,
                            },
                          },
                        },
                      },
                      "location": 21,
                      "typeName": {
                        "location": 23,
                        "names": [
                          {
                            "String": {
                              "sval": "text",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`int2.sql > line 95 1`] = `
[
  "SELECT (-32768)::int2 * (-1)::int2",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "ival": {},
                              "location": 8,
                            },
                          },
                          "location": 15,
                          "typeName": {
                            "location": 17,
                            "names": [
                              {
                                "String": {
                                  "sval": "int2",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "location": 22,
                      "name": [
                        {
                          "String": {
                            "sval": "*",
                          },
                        },
                      ],
                      "rexpr": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "ival": {},
                              "location": 25,
                            },
                          },
                          "location": 28,
                          "typeName": {
                            "location": 30,
                            "names": [
                              {
                                "String": {
                                  "sval": "int2",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`int2.sql > line 100 1`] = `
[
  "SELECT x, x::int2 AS int2_value
FROM (VALUES (-2.5::float8),
             (-1.5::float8),
             (-0.5::float8),
             (0.0::float8),
             (0.5::float8),
             (1.5::float8),
             (2.5::float8)) t(x)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "t",
                    "colnames": [
                      {
                        "String": {
                          "sval": "x",
                        },
                      },
                    ],
                  },
                  "subquery": {
                    "SelectStmt": {
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "valuesLists": [
                        {
                          "List": {
                            "items": [
                              {
                                "A_Expr": {
                                  "kind": "AEXPR_OP",
                                  "location": 46,
                                  "name": [
                                    {
                                      "String": {
                                        "sval": "-",
                                      },
                                    },
                                  ],
                                  "rexpr": {
                                    "TypeCast": {
                                      "arg": {
                                        "A_Const": {
                                          "fval": {
                                            "fval": "2.5",
                                          },
                                          "location": 47,
                                        },
                                      },
                                      "location": 50,
                                      "typeName": {
                                        "location": 52,
                                        "names": [
                                          {
                                            "String": {
                                              "sval": "float8",
                                            },
                                          },
                                        ],
                                        "typemod": -1,
                                      },
                                    },
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Expr": {
                                  "kind": "AEXPR_OP",
                                  "location": 75,
                                  "name": [
                                    {
                                      "String": {
                                        "sval": "-",
                                      },
                                    },
                                  ],
                                  "rexpr": {
                                    "TypeCast": {
                                      "arg": {
                                        "A_Const": {
                                          "fval": {
                                            "fval": "1.5",
                                          },
                                          "location": 76,
                                        },
                                      },
                                      "location": 79,
                                      "typeName": {
                                        "location": 81,
                                        "names": [
                                          {
                                            "String": {
                                              "sval": "float8",
                                            },
                                          },
                                        ],
                                        "typemod": -1,
                                      },
                                    },
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "A_Expr": {
                                  "kind": "AEXPR_OP",
                                  "location": 104,
                                  "name": [
                                    {
                                      "String": {
                                        "sval": "-",
                                      },
                                    },
                                  ],
                                  "rexpr": {
                                    "TypeCast": {
                                      "arg": {
                                        "A_Const": {
                                          "fval": {
                                            "fval": "0.5",
                                          },
                                          "location": 105,
                                        },
                                      },
                                      "location": 108,
                                      "typeName": {
                                        "location": 110,
                                        "names": [
                                          {
                                            "String": {
                                              "sval": "float8",
                                            },
                                          },
                                        ],
                                        "typemod": -1,
                                      },
                                    },
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "fval": {
                                        "fval": "0.0",
                                      },
                                      "location": 133,
                                    },
                                  },
                                  "location": 136,
                                  "typeName": {
                                    "location": 138,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "float8",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "fval": {
                                        "fval": "0.5",
                                      },
                                      "location": 161,
                                    },
                                  },
                                  "location": 164,
                                  "typeName": {
                                    "location": 166,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "float8",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "fval": {
                                        "fval": "1.5",
                                      },
                                      "location": 189,
                                    },
                                  },
                                  "location": 192,
                                  "typeName": {
                                    "location": 194,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "float8",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                            ],
                          },
                        },
                        {
                          "List": {
                            "items": [
                              {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "fval": {
                                        "fval": "2.5",
                                      },
                                      "location": 217,
                                    },
                                  },
                                  "location": 220,
                                  "typeName": {
                                    "location": 222,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "float8",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "x",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 10,
                  "name": "int2_value",
                  "val": {
                    "TypeCast": {
                      "arg": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "x",
                              },
                            },
                          ],
                          "location": 10,
                        },
                      },
                      "location": 11,
                      "typeName": {
                        "location": 13,
                        "names": [
                          {
                            "String": {
                              "sval": "int2",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`int2.sql > line 126 1`] = `
[
  "SELECT int2 '0b'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "TypeCast": {
                      "arg": {
                        "A_Const": {
                          "location": 12,
                          "sval": {
                            "sval": "0b",
                          },
                        },
                      },
                      "location": -1,
                      "typeName": {
                        "location": 7,
                        "names": [
                          {
                            "String": {
                              "sval": "int2",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
